Gamecore/compiler/CMDCompiler/cmdparser.parser.output
Terminals unused in grammar

   CMD_ASSIGN
   LN
   FLOOR
   EXP
   SELFANIMEXIST
   PROJCANCELTIME
   PLAYERIDEXIST
   PROJGUARDEDTIME
   PROJCONTACTTIME
   VAR
   TAN
   ID
   NEGONE
   DATA
   ATTACK
   DEFENCE
   FALLDEFUP
   LIEDOWTIME
   AIRJUGGLE
   SPARKNO
   GUARDSPARKNO
   KOECHO
   VOLUME
   INTEGERINDEX
   FLOATINDEX
   SIZE
   XSCALE
   YSCALE
   GROUNDBACK
   GROUNDFRONT
   AIRBACK
   AIRFRONT
   HEIGHT
   ATTACKDIST
   PROJATTDIST
   PROJDOSCALE
   HEADPOSX
   HEADPOSY
   MIDPOSX
   MIDPOSY
   SHADOWOFFSET
   DRAWOFFSETX
   DRAWOFFSETY
   VELOCITY
   WALKFWD
   WALKBACK
   RUNFWDX
   RUNFWDY
   RUNBACKX
   RUNBACKY
   JUMPNEU
   JUMPBACK
   JUMPFWD
   RUNJUMPBACK
   RUNJUMPFWD
   AIRJUMPNEU
   AIRJUMPBACK
   AIRJUMPFWD
   MOVEMENT
   AIRJUMPNUM
   AIRJUMPHEIGHT
   YACCEL
   STANDFRICTION
   CROUCHFRICTION
   ANIMELEM
   FVAR
   HITCOUNT
   HITDEFATTR
   ISHELPER
   MOVECONTACT
   PROJGUARDED
   PROJHITTIME
   STATENO
   TNULL
   AFTERIMAGE
   AFTERIMAGETIME
   ALLPALFX
   ANGLEADD
   ANGLEDRAW
   ANGLEMUL
   ANGLESET
   APPENDTOCLIPBOARD
   ASSERTSPECIAL
   ATTACKMULSET
   BGPALFX
   BINDTOPARENT
   BINDTOROOT
   BINDTOTARGET
   CHANGEANIME
   CHANGEANIME2
   CHANGESTATE
   CLEARCLIPBOARD
   CTRLSET
   DEFENCEMULSET
   DESTROYSELF
   DISPLAYTOCLIPBOARD
   ENVSHAKE
   EXPLOD
   EXPLODBINDTIME
   FALLENVSHAKE
   FORCEFEDDBACK
   GAMEMAKEANIM
   GRAVITY
   HELPER
   HITADD
   HITBY
   HITFALLDAMAGE
   HITFALLSET
   HITFALLVEL
   HITOVERRIDE
   HITVELSET
   LIFEADD
   LIFESET
   MAKEDUST
   MODIFYEXPLOD
   MOVEHITRESET
   NOTHITBY
   NUL
   OFFSET
   PALFX
   PARENTVARADD
   PARENTVARSET
   PAUSE
   PLAYERPUSH
   PLAYSND
   POSADD
   POSFREEZ
   POSSET
   POWERSET
   PROJECTILE
   REMOVEEXPLOD
   REVERSALDEF
   SCREENBOUND
   SELFSTATE
   SNDPAN
   STATETYPESET
   STOPSND
   SUPERPAUSE
   TARGETBIND
   TARGETDROP
   TARGETFACING
   TARGETLIFEADD
   TARGETPOWERADD
   TARGETSTATE
   TARGETVELADD
   TARGETVELSET
   TURN
   VARADD
   VARRANDOM
   VARRANGESET
   VARSET
   VELADD
   VELMUL
   WIDTH
   LENGTH
   PALCOLOR
   PALINVERTALL
   PALBRIGHT
   PALCONTRAST
   PALPOSTBRIGHT
   PALADD
   PALMUL
   TIMEGAP
   FRAMEGAP
   TRANS
   ACBEGIN
   ACTION
   LOOPSTART
   CLSN2DEFAULT
   CLSN1DEFAULT
   CLSN2
   CLSN1
   HORIZONTALFLIP
   VERTIKALFLIP
   HVFLIP
   ALPHA
   INFO
   DISPLAYNAME
   VERSIONSDATA
   MUGENVERSION
   AUTHOR
   FILES
   CMD
   CNS
   ST
   STCOMMON
   SPRITE
   SOUND
   PAL
   PALDEF
   ARCADE
   INTROSTORYBOARD
   ENDINGSTORYBOARD
   JUMPNEUY
   AIRJUMPNEUY
   CMD_KEY_DOWN
   CMD_KEY_FORWARD
   CMD_KEY_DOWN_FORWARD
   CMD_KEY_BACK
   CMD_KEY_DOWN_BACK
   CMD_KEY_UP_FORWARD
   CMD_KEY_UP
   CMD_KEY_UP_BACK
   CMD_BUTTON_B
   CMD_BUTTON_C
   CMD_BUTTON_X
   CMD_BUTTON_Y
   CMD_BUTTON_Z
   CMD_BUTTON_S
   KEY_TYPE


State 56 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 2 shift/reduce
State 70 conflicts: 6 shift/reduce
State 71 conflicts: 6 shift/reduce
State 73 conflicts: 6 shift/reduce
State 78 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 239 conflicts: 1 shift/reduce
State 245 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce
State 256 conflicts: 1 shift/reduce
State 258 conflicts: 1 shift/reduce
State 260 conflicts: 1 shift/reduce
State 261 conflicts: 1 shift/reduce
State 264 conflicts: 18 shift/reduce
State 265 conflicts: 18 shift/reduce
State 266 conflicts: 1 shift/reduce
State 268 conflicts: 1 shift/reduce
State 279 conflicts: 1 shift/reduce
State 326 conflicts: 2 shift/reduce
State 327 conflicts: 12 shift/reduce
State 328 conflicts: 4 shift/reduce
State 338 conflicts: 3 shift/reduce
State 342 conflicts: 1 shift/reduce
State 343 conflicts: 1 shift/reduce
State 348 conflicts: 4 shift/reduce
State 350 conflicts: 1 shift/reduce
State 351 conflicts: 1 shift/reduce
State 353 conflicts: 13 shift/reduce
State 357 conflicts: 14 shift/reduce
State 363 conflicts: 14 shift/reduce
State 373 conflicts: 1 shift/reduce
State 378 conflicts: 1 shift/reduce
State 379 conflicts: 1 shift/reduce
State 428 conflicts: 1 shift/reduce
State 430 conflicts: 1 shift/reduce
State 448 conflicts: 1 shift/reduce


Grammar

    0 $accept: lines "end of file"

    1 $@1: /* empty */

    2 lines: $@1 COMMENT
    3      | "end of line"
    4      | lines STATEDEFSECTION end_or_comment
    5      | error

    6 end_or_comment: "end of line"
    7               | COMMENT

    8 STATEDEFSECTION: '[' CMD_STATEDEF NUMBER ']'
    9                | '[' CMD_STATEDEF NUMBER ',' expression ']'
   10                | '[' CMD_STATEDEF NUMBER ',' math_expression ']'
   11                | '[' CMD_STATEDEF NUMBER ',' identificator_list ']'
   12                | '[' CMD_STATEDEF NUMBER ',' KEY_IDENTIFIER ']'
   13                | '[' CMD_STATEDEF NUMBER ',' error ']'
   14                | '[' CMD_STATEDEF negative_number ']'
   15                | '[' CMD_STATEDEF negative_number ',' expression ']'
   16                | '[' CMD_STATEDEF negative_number ',' math_expression ']'
   17                | '[' CMD_STATEDEF negative_number ',' identificator_list ']'
   18                | '[' CMD_STATEDEF negative_number ',' KEY_IDENTIFIER ']'
   19                | '[' CMD_STATEDEF negative_number ',' error ']'
   20                | STATESECTION

   21 STATESECTION: '[' CMD_STATE NUMBER ',' expression ']'
   22             | '[' CMD_STATE NUMBER ',' identificator_list ']'
   23             | '[' CMD_STATE NUMBER ',' expression_list ']'
   24             | '[' CMD_STATE NUMBER NUMBER ']'
   25             | '[' CMD_STATE NUMBER ']'
   26             | '[' CMD_STATE NUMBER ',' ']'
   27             | '[' CMD_STATE NUMBER ',' error ']'
   28             | '[' CMD_STATE negative_number ',' expression ']'
   29             | '[' CMD_STATE negative_number ',' identificator_list ']'
   30             | '[' CMD_STATE negative_number ',' expression_list ']'
   31             | '[' CMD_STATE negative_number NUMBER ']'
   32             | '[' CMD_STATE negative_number ']'
   33             | '[' CMD_STATE negative_number ',' ']'
   34             | '[' CMD_STATE negative_number ',' error ']'
   35             | '[' CMD_STATE IDENTIFIER ']'
   36             | COMMANDSECTION
   37             | TRIGGERSECTION
   38             | ANIMSECTION

   39 identificator_list: expression
   40                   | TRIGGER_REDIRECTION_IDENTIFIER
   41                   | math_operators
   42                   | CMD_STATE
   43                   | func_identifiers
   44                   | compare_operators
   45                   | IDENTIFIER IDENTIFIER
   46                   | IDENTIFIER CMD_STATE
   47                   | NUMBER IDENTIFIER
   48                   | NUMBER CMD_STATE
   49                   | KEY_IDENTIFIER IDENTIFIER
   50                   | KEY_IDENTIFIER CMD_STATE
   51                   | KEY_IDENTIFIER math_expression
   52                   | identificator_list CMD_STATE
   53                   | identificator_list IDENTIFIER
   54                   | identificator_list func_identifiers
   55                   | identificator_list NUMBER
   56                   | identificator_list KEY_IDENTIFIER
   57                   | identificator_list TRIGGER_REDIRECTION_IDENTIFIER

   58 number_list: NUMBER NUMBER
   59            | number_list NUMBER

   60 number_comma_list: NUMBER ',' NUMBER
   61                  | NUMBER ',' IDENTIFIER
   62                  | number_comma_list ',' NUMBER
   63                  | number_comma_list ',' IDENTIFIER

   64 identificator_comma_list: CMD_BUTTON_A ',' IDENTIFIER
   65                         | IDENTIFIER ',' IDENTIFIER
   66                         | IDENTIFIER ',' NUMBER
   67                         | CMD_BUTTON_A ',' identificator_comma_list
   68                         | IDENTIFIER ',' identificator_comma_list
   69                         | NUMBER ',' identificator_comma_list

   70 identificator_dot_list: IDENTIFIER '.' IDENTIFIER
   71                       | IDENTIFIER '.' KEY_IDENTIFIER
   72                       | KEY_IDENTIFIER '.' KEY_IDENTIFIER
   73                       | KEY_IDENTIFIER '.' IDENTIFIER
   74                       | identificator_dot_list '.' IDENTIFIER
   75                       | identificator_dot_list '.' KEY_IDENTIFIER

   76 TRIGGERSECTION: KEY_TRIGGER '=' expression
   77               | KEY_TRIGGERALL '=' expression
   78               | KEY_TRIGGER '=' expression ',' expression
   79               | KEY_TRIGGERALL '=' expression ',' expression

   80 ANIMSECTION: KEY_ANIM '=' super_simple_value expression
   81            | KEY_ANIM '=' expression

   82 COMMANDSECTION: command_identifier
   83               | ident_section

   84 command_identifier: /* empty */
   85                   | KEY_IDENTIFIER '=' KEY_ANIM
   86                   | KEY_IDENTIFIER '(' NUMBER ')' '=' expression
   87                   | KEY_IDENTIFIER
   88                   | KEY_IDENTIFIER '='
   89                   | KEY_IDENTIFIER '=' expression
   90                   | KEY_IDENTIFIER '=' expression '-'
   91                   | KEY_IDENTIFIER '=' expression '+'
   92                   | KEY_IDENTIFIER '=' expression_comma_list
   93                   | KEY_IDENTIFIER '=' TRIGGER_REDIRECTION_IDENTIFIER
   94                   | KEY_IDENTIFIER '.' KEY_IDENTIFIER '=' expression
   95                   | KEY_IDENTIFIER '.' KEY_IDENTIFIER '=' expression_comma_list
   96                   | KEY_IDENTIFIER '.' identificator_dot_list '=' expression
   97                   | KEY_IDENTIFIER '.' identificator_dot_list '=' expression_comma_list
   98                   | KEY_IDENTIFIER '.' IDENTIFIER '=' expression
   99                   | KEY_IDENTIFIER '.' IDENTIFIER '=' expression_comma_list
  100                   | IDENTIFIER '(' NUMBER ')' '=' expression
  101                   | IDENTIFIER '=' expression
  102                   | IDENTIFIER '=' expression_comma_list
  103                   | IDENTIFIER '.' IDENTIFIER '=' expression
  104                   | IDENTIFIER '.' IDENTIFIER '=' expression_comma_list
  105                   | IDENTIFIER '.' KEY_IDENTIFIER '=' expression
  106                   | IDENTIFIER '.' KEY_IDENTIFIER '=' expression_comma_list
  107                   | IDENTIFIER '.' identificator_dot_list '=' expression
  108                   | IDENTIFIER '.' identificator_dot_list '=' expression_comma_list
  109                   | common_names '=' expression
  110                   | common_names '=' expression_comma_list
  111                   | FUNC_SYSVAR '(' NUMBER ')' '=' expression
  112                   | FUNC_VAR '(' NUMBER ')' '=' expression
  113                   | FUNC_FVAR '(' NUMBER ')' '=' expression
  114                   | KEYWORD '=' expression
  115                   | KEYWORD '=' expression_comma_list
  116                   | CONST_PARAM '=' expression
  117                   | CONST_PARAM '=' expression_comma_list

  118 expression_list: expression expression
  119                | expression_list expression

  120 expression_comma_list: expression ',' expression
  121                      | expression_comma_list ',' expression

  122 common_names: KEY_PHYSICS
  123             | KEY_STATETYPE

  124 ident_section: '[' IDENTIFIER ']'
  125              | '[' KEY_IDENTIFIER ']'

  126 expression: hitdef
  127           | functions
  128           | function_if_else
  129           | key_anim_expression
  130           | math_expression
  131           | compare_expression
  132           | logical_expression
  133           | identificator_comma_list
  134           | '(' expression ')'
  135           | '(' expression error
  136           | '-' expression
  137           | number_list
  138           | simple_value
  139           | super_simple_value
  140           | ',' expression
  141           | TRIGGER_REDIRECTION_IDENTIFIER '(' expression ')' ',' expression
  142           | TRIGGER_REDIRECTION_IDENTIFIER ',' expression
  143           | KEY_FX math_operators expression
  144           | KEY_SX math_operators expression
  145           | KEY_FX
  146           | KEY_SX
  147           | KEY_IDENTIFIER '=' expression

  148 function_if_else: FUNC_IFELSE '(' expression ',' expression ',' expression ')'
  149                 | FUNC_IFELSE '(' key_anim_expression ',' expression ',' expression ')'
  150                 | FUNC_IFELSE '(' key_anim_expression ',' simple_value ',' simple_value ')'
  151                 | FUNC_IFELSE '(' key_anim_expression ',' super_simple_value ',' super_simple_value ')'

  152 key_anim_expression: KEY_ANIM compare_operators expression
  153                    | KEY_ANIM math_operators expression

  154 logical_expression: '~' expression
  155                   | '!' expression
  156                   | expression '&' expression
  157                   | expression '|' expression
  158                   | expression CMD_XOR expression
  159                   | expression CMD_LOGAND expression
  160                   | expression CMD_LOGOR expression
  161                   | expression CMD_LOGXOR expression

  162 math_expression: expression math_operators expression

  163 compare_expression: expression '=' expression
  164                   | expression CMD_NOTEQ expression
  165                   | expression '>' expression
  166                   | expression '<' expression
  167                   | expression CMD_LESSTHANEQ expression
  168                   | expression CMD_GREATERTHANEQ expression

  169 compare_operators: '='
  170                  | CMD_NOTEQ
  171                  | '>'
  172                  | '<'
  173                  | CMD_LESSTHANEQ
  174                  | CMD_GREATERTHANEQ

  175 math_operators: '+'
  176               | '-'
  177               | '/'
  178               | '*'
  179               | '%'
  180               | CMD_SQUARE

  181 keyword_comma_list: keywords ',' keywords

  182 keywords: KEYWORD
  183         | KEYWORD compare_operators expression
  184         | KEYWORD compare_operators number_comma_list
  185         | KEY_STATETYPE compare_operators expression
  186         | KEY_STATETYPE compare_operators number_comma_list
  187         | KEY_IDENTIFIER '(' NUMBER ')'
  188         | KEY_IDENTIFIER compare_operators number_comma_list
  189         | KEY_IDENTIFIER compare_operators expression
  190         | KEY_IDENTIFIER math_operators expression
  191         | common_names compare_operators expression
  192         | common_names compare_operators number_comma_list

  193 range: '[' NUMBER ',' NUMBER ']'
  194      | '(' NUMBER ',' NUMBER ')'
  195      | '[' NUMBER ',' NUMBER ')'
  196      | '(' NUMBER ',' NUMBER ']'

  197 func_comparator: FUNC_IDENTIFIER compare_operators super_simple_value

  198 functions: FUNC_IDENTIFIER '(' expression ')'
  199          | FUNC_IDENTIFIER '(' NUMBER ')'
  200          | FUNC_CONST '(' CONST_PARAM ')'
  201          | FUNC_LOG '(' expression ',' expression ')'
  202          | func_comparator
  203          | func_comparator ',' compare_operators super_simple_value
  204          | func_comparator ',' super_simple_value
  205          | func_comparator ',' compare_operators negative_number
  206          | func_comparator ',' negative_number
  207          | FUNC_IDENTIFIER '=' number_comma_list
  208          | FUNC_IDENTIFIER '=' identificator_comma_list
  209          | FUNC_PROJCONTACT '=' NUMBER
  210          | FUNC_PROJCONTACT '=' NUMBER ',' compare_operators expression
  211          | FUNC_PROJGUARDED '=' NUMBER
  212          | FUNC_PROJGUARDED '=' NUMBER ',' compare_operators expression
  213          | FUNC_PROJHIT '=' NUMBER
  214          | FUNC_PROJHIT '=' NUMBER ',' compare_operators expression
  215          | FUNC_SYSVAR '(' NUMBER ')' '=' expression
  216          | FUNC_SYSVAR '(' NUMBER ')'
  217          | FUNC_FVAR '(' expression ')'
  218          | FUNC_FVAR '(' NUMBER ')'
  219          | FUNC_VAR '(' expression ')'
  220          | FUNC_VAR '(' NUMBER ')'

  221 func_identifiers: FUNC_IDENTIFIER
  222                 | FUNC_CONST
  223                 | FUNC_LOG
  224                 | FUNC_PROJCONTACT
  225                 | FUNC_PROJGUARDED
  226                 | FUNC_PROJHIT
  227                 | FUNC_SYSVAR
  228                 | FUNC_FVAR
  229                 | FUNC_VAR

  230 hitdef: KEY_HITDEF
  231       | KEY_HITDEF '=' IDENTIFIER
  232       | KEY_HITDEF '=' identificator_comma_list
  233       | KEY_HITDEF '!' '=' IDENTIFIER
  234       | KEY_HITDEF '!' '=' identificator_comma_list
  235       | KEY_HITDEF '=' CMD_BUTTON_A
  236       | KEY_HITDEF '!' '=' CMD_BUTTON_A

  237 simple_value: keywords
  238             | keyword_comma_list
  239             | range
  240             | QUOTESTRING

  241 super_simple_value: NUMBER
  242                   | KEY_IDENTIFIER
  243                   | IDENTIFIER

  244 negative_number: '-' NUMBER


Terminals, with rules where they appear

"end of file" (0) 0
'!' (33) 155 233 234 236
'%' (37) 179
'&' (38) 156
'(' (40) 86 100 111 112 113 134 135 141 148 149 150 151 187 194 196
    198 199 200 201 215 216 217 218 219 220
')' (41) 86 100 111 112 113 134 141 148 149 150 151 187 194 195 198
    199 200 201 215 216 217 218 219 220
'*' (42) 178
'+' (43) 91 175
',' (44) 9 10 11 12 13 15 16 17 18 19 21 22 23 26 27 28 29 30 33 34
    60 61 62 63 64 65 66 67 68 69 78 79 120 121 140 141 142 148 149
    150 151 181 193 194 195 196 201 203 204 205 206 210 212 214
'-' (45) 90 136 176 244
'.' (46) 70 71 72 73 74 75 94 95 96 97 98 99 103 104 105 106 107 108
'/' (47) 177
'<' (60) 166 172
'=' (61) 76 77 78 79 80 81 85 86 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
    116 117 147 163 169 207 208 209 210 211 212 213 214 215 231 232
    233 234 235 236
'>' (62) 165 171
'[' (91) 8 9 10 11 12 13 14 15 16 17 18 19 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 124 125 193 195
']' (93) 8 9 10 11 12 13 14 15 16 17 18 19 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 124 125 193 196
'|' (124) 157
'~' (126) 154
error (256) 5 13 19 27 34 135
NUMBER (258) 8 9 10 11 12 13 21 22 23 24 25 26 27 31 47 48 55 58 59
    60 61 62 66 69 86 100 111 112 113 187 193 194 195 196 199 209 210
    211 212 213 214 215 216 218 220 241 244
LOGICAL_OPERATORS (259)
CMD_LOGXOR (260) 161
CMD_LOGAND (261) 159
CMD_LOGOR (262) 160
CMD_XOR (263) 158
CMD_ASSIGN (264)
CMD_NOTEQ (265) 164 170
CMD_GREATERTHANEQ (266) 168 174
CMD_LESSTHANEQ (267) 167 173
COMP_OPERATORS (268)
MATH_OPERATORS (269)
CMD_SQUARE (270) 180
UPLUS (271)
UMINUS (272)
LN (273)
FLOOR (274)
EXP (275)
KEYWORD (276) 114 115 182 183 184
KEY_IDENTIFIER (277) 12 18 49 50 51 56 71 72 73 75 85 86 87 88 89 90
    91 92 93 94 95 96 97 98 99 105 106 125 147 187 188 189 190 242
FUNC_IDENTIFIER (278) 197 198 199 207 208 221
EXPRESSIONLIST (279)
SELFANIMEXIST (280)
PROJCANCELTIME (281)
PLAYERIDEXIST (282)
PROJGUARDEDTIME (283)
PROJCONTACTTIME (284)
VAR (285)
TAN (286)
FUNC_FVAR (287) 113 217 218 228
FUNC_VAR (288) 112 219 220 229
FUNC_SYSVAR (289) 111 215 216 227
FUNC_CONST (290) 200 222
FUNC_LOG (291) 201 223
FUNC_PROJGUARDED (292) 211 212 225
FUNC_PROJHIT (293) 213 214 226
FUNC_PROJCONTACT (294) 209 210 224
KANIM (295)
FUNC_IFELSE (296) 148 149 150 151
KEY_TRIGGER (297) 76 78
"end of line" (298) 3 6
ID (299)
QUOTESTRING (300) 240
NEGONE (301)
DATA (302)
ATTACK (303)
DEFENCE (304)
FALLDEFUP (305)
LIEDOWTIME (306)
AIRJUGGLE (307)
SPARKNO (308)
GUARDSPARKNO (309)
KOECHO (310)
VOLUME (311)
INTEGERINDEX (312)
FLOATINDEX (313)
SIZE (314)
XSCALE (315)
YSCALE (316)
GROUNDBACK (317)
GROUNDFRONT (318)
AIRBACK (319)
AIRFRONT (320)
HEIGHT (321)
ATTACKDIST (322)
PROJATTDIST (323)
PROJDOSCALE (324)
HEADPOSX (325)
HEADPOSY (326)
MIDPOSX (327)
MIDPOSY (328)
SHADOWOFFSET (329)
DRAWOFFSETX (330)
DRAWOFFSETY (331)
VELOCITY (332)
WALKFWD (333)
WALKBACK (334)
RUNFWDX (335)
RUNFWDY (336)
RUNBACKX (337)
RUNBACKY (338)
JUMPNEU (339)
JUMPBACK (340)
JUMPFWD (341)
RUNJUMPBACK (342)
RUNJUMPFWD (343)
AIRJUMPNEU (344)
AIRJUMPBACK (345)
AIRJUMPFWD (346)
MOVEMENT (347)
AIRJUMPNUM (348)
AIRJUMPHEIGHT (349)
YACCEL (350)
STANDFRICTION (351)
CROUCHFRICTION (352)
KEY_TRIGGERALL (353) 77 79
IDENTIFIER (354) 35 45 46 47 49 53 61 63 64 65 66 68 70 71 73 74 98
    99 100 101 102 103 104 105 106 107 108 124 231 233 243
CMD_STATEDEF (355) 8 9 10 11 12 13 14 15 16 17 18 19
KEY_PHYSICS (356) 122
CMD_STATE (357) 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 42 46
    48 50 52
ANIMELEM (358)
FVAR (359)
HITCOUNT (360)
HITDEFATTR (361)
ISHELPER (362)
MOVECONTACT (363)
PROJGUARDED (364)
PROJHITTIME (365)
STATENO (366)
TNULL (367)
AFTERIMAGE (368)
AFTERIMAGETIME (369)
ALLPALFX (370)
ANGLEADD (371)
ANGLEDRAW (372)
ANGLEMUL (373)
ANGLESET (374)
APPENDTOCLIPBOARD (375)
ASSERTSPECIAL (376)
ATTACKMULSET (377)
BGPALFX (378)
BINDTOPARENT (379)
BINDTOROOT (380)
BINDTOTARGET (381)
CHANGEANIME (382)
CHANGEANIME2 (383)
CHANGESTATE (384)
CLEARCLIPBOARD (385)
CTRLSET (386)
DEFENCEMULSET (387)
DESTROYSELF (388)
DISPLAYTOCLIPBOARD (389)
ENVSHAKE (390)
EXPLOD (391)
EXPLODBINDTIME (392)
FALLENVSHAKE (393)
FORCEFEDDBACK (394)
GAMEMAKEANIM (395)
GRAVITY (396)
HELPER (397)
HITADD (398)
HITBY (399)
KEY_HITDEF (400) 230 231 232 233 234 235 236
HITFALLDAMAGE (401)
HITFALLSET (402)
HITFALLVEL (403)
HITOVERRIDE (404)
HITVELSET (405)
LIFEADD (406)
LIFESET (407)
MAKEDUST (408)
MODIFYEXPLOD (409)
MOVEHITRESET (410)
NOTHITBY (411)
NUL (412)
OFFSET (413)
PALFX (414)
PARENTVARADD (415)
PARENTVARSET (416)
PAUSE (417)
PLAYERPUSH (418)
PLAYSND (419)
POSADD (420)
POSFREEZ (421)
POSSET (422)
POWERSET (423)
PROJECTILE (424)
REMOVEEXPLOD (425)
REVERSALDEF (426)
SCREENBOUND (427)
SELFSTATE (428)
SNDPAN (429)
STATETYPESET (430)
STOPSND (431)
SUPERPAUSE (432)
TARGETBIND (433)
TARGETDROP (434)
TARGETFACING (435)
TARGETLIFEADD (436)
TARGETPOWERADD (437)
TARGETSTATE (438)
TARGETVELADD (439)
TARGETVELSET (440)
TURN (441)
VARADD (442)
VARRANDOM (443)
VARRANGESET (444)
VARSET (445)
VELADD (446)
VELMUL (447)
WIDTH (448)
LENGTH (449)
PALCOLOR (450)
PALINVERTALL (451)
PALBRIGHT (452)
PALCONTRAST (453)
PALPOSTBRIGHT (454)
PALADD (455)
PALMUL (456)
TIMEGAP (457)
FRAMEGAP (458)
TRANS (459)
ACBEGIN (460)
ACTION (461)
LOOPSTART (462)
CLSN2DEFAULT (463)
CLSN1DEFAULT (464)
CLSN2 (465)
CLSN1 (466)
HORIZONTALFLIP (467)
VERTIKALFLIP (468)
HVFLIP (469)
ALPHA (470)
INFO (471)
DISPLAYNAME (472)
VERSIONSDATA (473)
MUGENVERSION (474)
AUTHOR (475)
FILES (476)
CMD (477)
CNS (478)
ST (479)
STCOMMON (480)
SPRITE (481)
SOUND (482)
PAL (483)
PALDEF (484)
ARCADE (485)
INTROSTORYBOARD (486)
ENDINGSTORYBOARD (487)
JUMPNEUY (488)
AIRJUMPNEUY (489)
KEY_FX (490) 143 145
KEY_SX (491) 144 146
CMD_KEY_DOWN (492)
CMD_KEY_FORWARD (493)
CMD_KEY_DOWN_FORWARD (494)
CMD_KEY_BACK (495)
CMD_KEY_DOWN_BACK (496)
CMD_KEY_UP_FORWARD (497)
CMD_KEY_UP (498)
CMD_KEY_UP_BACK (499)
CMD_BUTTON_A (500) 64 67 235 236
CMD_BUTTON_B (501)
CMD_BUTTON_C (502)
CMD_BUTTON_X (503)
CMD_BUTTON_Y (504)
CMD_BUTTON_Z (505)
CMD_BUTTON_S (506)
KEY_STATETYPE (507) 123 185 186
KEY_TYPE (508)
KEY_ANIM (509) 80 81 85 152 153
TRIGGER_REDIRECTION_IDENTIFIER (510) 40 57 93 141 142
CONST_PARAM (511) 116 117 200
COMMENT (512) 2 7


Nonterminals, with rules where they appear

$accept (276)
    on left: 0
lines (277)
    on left: 2 3 4 5, on right: 0 4
$@1 (278)
    on left: 1, on right: 2
end_or_comment (279)
    on left: 6 7, on right: 4
STATEDEFSECTION (280)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20, on right: 4
STATESECTION (281)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38,
    on right: 20
identificator_list (282)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57, on right: 11 17 22 29 52 53 54 55 56 57
number_list (283)
    on left: 58 59, on right: 59 137
number_comma_list (284)
    on left: 60 61 62 63, on right: 62 63 184 186 188 192 207
identificator_comma_list (285)
    on left: 64 65 66 67 68 69, on right: 67 68 69 133 208 232 234
identificator_dot_list (286)
    on left: 70 71 72 73 74 75, on right: 74 75 96 97 107 108
TRIGGERSECTION (287)
    on left: 76 77 78 79, on right: 37
ANIMSECTION (288)
    on left: 80 81, on right: 38
COMMANDSECTION (289)
    on left: 82 83, on right: 36
command_identifier (290)
    on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117,
    on right: 82
expression_list (291)
    on left: 118 119, on right: 23 30 119
expression_comma_list (292)
    on left: 120 121, on right: 92 95 97 99 102 104 106 108 110 115
    117 121
common_names (293)
    on left: 122 123, on right: 109 110 191 192
ident_section (294)
    on left: 124 125, on right: 83
expression (295)
    on left: 126 127 128 129 130 131 132 133 134 135 136 137 138 139
    140 141 142 143 144 145 146 147, on right: 9 15 21 28 39 76 77
    78 79 80 81 86 89 90 91 94 96 98 100 101 103 105 107 109 111 112
    113 114 116 118 119 120 121 134 135 136 140 141 142 143 144 147
    148 149 152 153 154 155 156 157 158 159 160 161 162 163 164 165
    166 167 168 183 185 189 190 191 198 201 210 212 214 215 217 219
function_if_else (296)
    on left: 148 149 150 151, on right: 128
key_anim_expression (297)
    on left: 152 153, on right: 129 149 150 151
logical_expression (298)
    on left: 154 155 156 157 158 159 160 161, on right: 132
math_expression (299)
    on left: 162, on right: 10 16 51 130
compare_expression (300)
    on left: 163 164 165 166 167 168, on right: 131
compare_operators (301)
    on left: 169 170 171 172 173 174, on right: 44 152 183 184 185
    186 188 189 191 192 197 203 205 210 212 214
math_operators (302)
    on left: 175 176 177 178 179 180, on right: 41 143 144 153 162
    190
keyword_comma_list (303)
    on left: 181, on right: 238
keywords (304)
    on left: 182 183 184 185 186 187 188 189 190 191 192, on right:
    181 237
range (305)
    on left: 193 194 195 196, on right: 239
func_comparator (306)
    on left: 197, on right: 202 203 204 205 206
functions (307)
    on left: 198 199 200 201 202 203 204 205 206 207 208 209 210 211
    212 213 214 215 216 217 218 219 220, on right: 127
func_identifiers (308)
    on left: 221 222 223 224 225 226 227 228 229, on right: 43 54
hitdef (309)
    on left: 230 231 232 233 234 235 236, on right: 126
simple_value (310)
    on left: 237 238 239 240, on right: 138 150
super_simple_value (311)
    on left: 241 242 243, on right: 80 139 151 197 203 204
negative_number (312)
    on left: 244, on right: 14 15 16 17 18 19 28 29 30 31 32 33 34
    205 206


state 0

    0 $accept: . lines "end of file"

    error          shift, and go to state 1
    "end of line"  shift, and go to state 2

    COMMENT  reduce using rule 1 ($@1)

    lines  go to state 3
    $@1    go to state 4


state 1

    5 lines: error .

    $default  reduce using rule 5 (lines)


state 2

    3 lines: "end of line" .

    $default  reduce using rule 3 (lines)


state 3

    0 $accept: lines . "end of file"
    4 lines: lines . STATEDEFSECTION end_or_comment

    "end of file"   shift, and go to state 5
    KEYWORD         shift, and go to state 6
    KEY_IDENTIFIER  shift, and go to state 7
    FUNC_FVAR       shift, and go to state 8
    FUNC_VAR        shift, and go to state 9
    FUNC_SYSVAR     shift, and go to state 10
    KEY_TRIGGER     shift, and go to state 11
    KEY_TRIGGERALL  shift, and go to state 12
    IDENTIFIER      shift, and go to state 13
    KEY_PHYSICS     shift, and go to state 14
    KEY_STATETYPE   shift, and go to state 15
    KEY_ANIM        shift, and go to state 16
    CONST_PARAM     shift, and go to state 17
    '['             shift, and go to state 18

    $default  reduce using rule 84 (command_identifier)

    STATEDEFSECTION     go to state 19
    STATESECTION        go to state 20
    TRIGGERSECTION      go to state 21
    ANIMSECTION         go to state 22
    COMMANDSECTION      go to state 23
    command_identifier  go to state 24
    common_names        go to state 25
    ident_section       go to state 26


state 4

    2 lines: $@1 . COMMENT

    COMMENT  shift, and go to state 27


state 5

    0 $accept: lines "end of file" .

    $default  accept


state 6

  114 command_identifier: KEYWORD . '=' expression
  115                   | KEYWORD . '=' expression_comma_list

    '='  shift, and go to state 28


state 7
